# smonitor-iot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  sdkconfig.defaults  sdkconfig.defaults.local.example
.github/workflows/: esp-idf.yml
components/smonitor_battery/: CMakeLists.txt  Kconfig  smonitor_battery.c
components/smonitor_battery/include/: smonitor_battery.h
components/smonitor_client/: CMakeLists.txt  Kconfig  device_config.cpp  device_config.hpp  gpio_control.cpp  gpio_control.hpp  idf_component.yml  json_client.cpp  json_client.hpp  time_sync.cpp  time_sync.hpp  websocket_client.cpp  websocket_client.hpp
components/smonitor_client/include/: smonitor_client.h
examples/generic_esp32_sim7000/: sdkconfig.defaults
examples/generic_esp32_uart_modem/: sdkconfig.defaults
examples/lilygo_sim7000g/: sdkconfig.defaults
examples/lilygo_sim7000g_bme280/: sdkconfig.defaults
examples/lilygo_t_sim7000g_vipmobile/: sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_controller.cpp  app_controller.hpp  app_main.cpp  device_identity.cpp  device_identity.hpp  idf_component.yml  sensor_runtime.cpp  sensor_runtime.hpp
main/boards/: board_profile.c  board_profile.h  generic_esp32_uart.c  generic_esp32_uart.h  lilygo_t_sim7000g.c  lilygo_t_sim7000g.h
main/boards/common/: modem_gpio_power.c  modem_gpio_power.h
